--- a/css/style.css
+++ b/css/style.css
@@ -46,3 +46,20 @@ header {
   font-size: 1.2em;
   font-weight: bold;
 }
+
+.moveBtn {
+  height: 100px;
+  margin-top: 10%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.moveBtn > button {
+  width: 70%;
+  height: 40px;
+  margin: 0 auto;
+  background: #f0e9c8;
+  border: 0;
+  border-radius: 12px;
+}
